k8s/deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "spring-app"
  labels:
    app: "spring-app"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "spring-app"      
  template:
    metadata:
      labels:
        app: "spring-app"
    spec:
      containers:
      - name: "spring-app"
        image: "gcr.io/tg-ktb-devops-workshop/spring"
