k8s/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "spring-app-service"
  labels:
    app: "spring-app"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8081
  selector:
    app: "spring-app"
  type: "NodePort"
